--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,17 +1,37 @@
 <div ng-controller="homeController">
-  <label>Hello? Is anybody there?</label>
-  <input type="text" ng-model="hello" placeholder="Maybe a traditional greeting?">
-  <hr>
   
-  
-  <span ng-repeat="post in posts">
-    {{post.title}}
-    {{post.date}}
-    {{post.content}}
-    {{tags}}
+  <span ng-repeat="tag in tags">
+    <input type="checkbox" value="tag.id" ng-click="addTag(tag.id)">{{tag.name}}</input>
   </span>
+  <div class="form">
+    Title: <input type="text"/>
+    Content: <input type="text"/>
+    Tags: <span ng-repeat="tag in tags">
+      <input type="checkbox" value="tag.id">{{tag.name}}</input>
+    </span>
+  </div>
+  
+  <div ng-click="submitNewPost()">submit</div>
+  
+  <input type="text" ng-model="search.title">
+  
+  <div ng-repeat="post in posts | filter:search:strict | selectedTags:tagArray:true">
+    <h2>{{post.title}}</h2>
+    <small>{{post.date}}</small>
+    <p>{{post.content}}</p>
+    <hr>
+  </div>
   
   <small ng-repeat="tag_id in post.tag_ids">
-    {{tag_ids}}
+    {{getTagName(tag_id)}}
   </small>
-</div>
+  
+  <div class="form">
+    Title: <input type="text" ng-model="newPost.title" />
+    Content: <input type="text" ng-model="newPost.content" />
+    Tags:
+      <span ng-repeat="tag in tags">
+        <input type="checkbox" value="tag.id" ng-click="toggleId(tag.id)">{{tag.name}}</input>
+      </span>
+      {{newPost}}
+    </div>
