--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,37 +1,40 @@
 <div ng-controller="homeController">
   
-  <span ng-repeat="tag in tags">
+  Search: <input type="text" ng-model="search"/>
+  Search by title: <input type="text" ng-model="search.title">
+  <br>
+  Tags: <span ng-repeat="tag in tags">
     <input type="checkbox" value="tag.id" ng-click="addTag(tag.id)">{{tag.name}}</input>
-  </span>
+  </span><br>
+  tag array is {{tagArray}}<br>
+  
+  search is: {{search}}
+  <br><br><hr>
   <div class="form">
-    Title: <input type="text"/>
-    Content: <input type="text"/>
+    Title: <input type="text" ng-model="newPost.title"/>
+    Content: <input type="text" ng-model="newPost.content"/>
     Tags: <span ng-repeat="tag in tags">
-      <input type="checkbox" value="tag.id">{{tag.name}}</input>
+      <input type="checkbox" value="tag.id" ng-click="toggleId(tag.id)">{{tag.name}}</input>
     </span>
+    <button ng-click="submitNewPost()">
+      Create a new post
+    </button>
   </div>
+  the new post is: {{newPost}}
   
-  <div ng-click="submitNewPost()">submit</div>
-  
-  <input type="text" ng-model="search.title">
-  
-  <div ng-repeat="post in posts | filter:search:strict | selectedTags:tagArray:true">
-    <h2>{{post.title}}</h2>
-    <small>{{post.date}}</small>
+  <span ng-repeat="post in posts | filter:search:strict">
+    
+    <a ui-sref="show({id: post.id})">
+      <h2>{{post.title}}</h2><br>
+    </a>
+    
+    <small ng-repeat="tag_id in post.tag_ids">
+      {{getTagName(tag_id)}}
+    </small>
+    
+    <span>{{post.date | date:'EEEE'}}</span><br>
     <p>{{post.content}}</p>
     <hr>
-  </div>
-  
-  <small ng-repeat="tag_id in post.tag_ids">
-    {{getTagName(tag_id)}}
-  </small>
-  
-  <div class="form">
-    Title: <input type="text" ng-model="newPost.title" />
-    Content: <input type="text" ng-model="newPost.content" />
-    Tags:
-      <span ng-repeat="tag in tags">
-        <input type="checkbox" value="tag.id" ng-click="toggleId(tag.id)">{{tag.name}}</input>
-      </span>
-      {{newPost}}
-    </div>
+  </span>
+  {{tags}}
+</div>
