--- a/app/views/home.html
+++ b/app/views/home.html
@@ -26,6 +26,8 @@
   HERE'S YOUR POST:
   {{newPost.title}}
   {{newPost.content}}
+  
+  <!-- doesn't work. figure this out! -->
   {{newPost.tag.id}}
   
   <span ng-repeat="post in posts | filter:search:strict">
@@ -34,13 +36,18 @@
       <h2>{{post.title}}</h2><br>
     </a>
     
-    <small ng-repeat="tag_id in post.tag_ids">
-      {{getTagName(tag_id)}}
-    </small>
-    
     <span>{{post.date | date:'EEEE'}}</span><br>
     <p>{{post.content}}</p>
+    
+    <small ng-repeat="tag_id in post.tag_ids">
+      {{getTagName(tag_id)}}
+    </small><br>
+    
     <hr>
   </span>
-  {{tags}}
+  
+  ALL TAGS:
+  <div ng-repeat="tag in tags">
+    {{tag.name}}
+  </small>
 </div>
