--- a/app/views/home.html
+++ b/app/views/home.html
@@ -45,7 +45,7 @@
   <span ng-repeat="post in posts | filter:search:strict">
     
     <a ui-sref="show({id: post.id})">
-      <h2>{{post.title}}</h2><br>
+      <h2 class="title">{{post.title}}</h2><br>
     </a>
     
     <span>{{post.date | date:'EEEE'}}</span><br>
