create side navbar

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -67,9 +67,12 @@
     
     <hr>
   </span>
+
+<div class="sidebar">
   
-  ALL TAGS:
+  tags:
   <div ng-repeat="tag in tags">
     {{tag.name}}
-  </small>
+  </div>
+
 </div>
