--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,5 +1,6 @@
 <div ng-controller="homeController">
-  
+  <div class="main-content">
+    
   Search:<br>
   <input type="text" ng-model="search"/><br>
   
@@ -67,6 +68,7 @@
     
     <hr>
   </span>
+</div>
 
 <div class="sidebar">
   
