--- a/app/views/home.html
+++ b/app/views/home.html
@@ -61,10 +61,10 @@
   
   <div class="sidebar">
     Search:<br>
-    <input type="text" ng-model="search"/><br>
+    <input class="small-text" type="text" ng-model="search"/><br>
     
     Search by title:<br>
-    <input type="text" ng-model="search.title"><br>
+    <input class="small-text" type="text" ng-model="search.title"><br>
     
     tags:
     <div ng-repeat="tag in tags">
