--- a/app/views/new.html
+++ b/app/views/new.html
@@ -3,6 +3,21 @@
   <input class="biggish-text" type="text" ng-model="newPost.title" /><br>
   Content:<br>
   <input class="big-text" type="text" ng-model="newPost.content" /><br><br>
-  <button ng-click="submitNewPost()">Submit</button>
 
+  <div ng-repeat="tag in tags"><br>
+    <input type="checkbox" ng-model="checked" ng-init="checked=false" value="tag.id" ng-click="toggleId(tag.id)">{{tag.name}}</input><br>
+    
+    <span ng-if="checked" class="animate-if">
+      {{tag.name}}
+    </span>
+    
+  </div>
+  
+  <button ng-click="submitNewPost()">
+    Create a new post
+  </button>
+  
+  
+  
 </div>
+
