show page shows content and tags

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -16,7 +16,7 @@
         {{getTagName(tag_id)}}
       </small><br>
       
-      <button ng-click="delete(post)">
+      <button ng-click="deletePost()">
         Delete Post
       </button>
       
